disabled tracing in the build flags.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,7 @@ platform = ststm32
 board = mxchip_az3166
 framework = arduino
 monitor_speed = 115200
+build_flags =
+    -DENABLETRACE=0
 lib_deps = 
 
